# autarch-hardware

./: .gitignore  Cargo.toml  flake.nix
modules/: devshell.nix  package.nix  service.nix
src/: cli.rs  event.rs  gpio.rs  main.rs
