[package]
name = "autarch-hardware"
description = "Service for simulating keyboard input from Raspberry Pi GPIO"
repository = "https://github.com/hayesHowYaDoin/autarch-hardware"
authors = ["Jordan Hayes <jordanhayes98@gmail.com>"]
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
include = ["src/**", "data/pokedex.db", "data/assets/**"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
enigo = "0.6.1"
log = "0.4"
simplelog = "0.12.2"

[target.'cfg(target_arch = "aarch64")'.dependencies]
rppal = "0.22.1"

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
crossterm = "0.28"

